# small-proxy-contract

./: .gitignore  Cargo.toml  README.md  build.sh  build_docker.sh
res/: small_proxy.wasm
small-proxy/: Cargo.toml  build.sh
small-proxy-factory/: Cargo.toml  build.sh
small-proxy-factory/res/: small_proxy_factory.wasm
small-proxy-factory/src/: lib.rs  proxy.rs
small-proxy/res/: small_proxy.wasm
small-proxy/src/: lib.rs
src/: lib.rs
